vlib/v/parser/tests/struct_init_from_another_mod_err.vv
import rand
import rand.config

fn main() {
	mut a := [0, 1, 2]
	rand.shuffle(mut a, rand.config.ShuffleConfigStruct{})!
}
